--- a/index.html
+++ b/index.html
@@ -22,43 +22,19 @@
             <header><a href="#contact_info">Contact Me</a></header>
         </section>
     </main>
+    <!-- Buttons in the center of page -->
+    <section class="main_page">
+        <div id="about_me" class="about_me">
+            <img src="about_time.jpeg" alt="about time picture">
+            <p>About me!</p>
+        </div>
+        <div id="experience_section" class="experience_section">
+            <img src="Pathway.jpeg" alt ="pathway">
+            <p>Professional Experience!</p>
+        </div>
+    </section>
+
  
-
-
-<!---Add About Me Section here -->
-    <section id="about_me" class ="main_page" >
-        <img src="Pathway.jpeg" alt="Pathway">
-        <h1>About Me!</h1>
-        Hi there! My name is David Trieu and this is my professional profile page. 
-        <br>As you progress throughout this website, you will get to know more about my work experience as well as a way to reach me if you have any questions!
-        <br>I have lived in Minnesota almost my entire live with the minor exclusion of heading to Iowa to further my education.
-        <br>After I graduated, I came back to MN with an offer to work in the IT space as a project manager for the last 5 years. 
-        <br>Due to the new changes, I have been trying to seek new challenges and came to find this software class. 
-    </section>
-<!---Add Work Experience Section here -->
-    <section id="experience_section" class="main_page">
-        <h1>My Professional Experience</h1>
-        <h3>Agile Scrum Master (Mar 2002 - Apr 2023)</h3>
-            Collaborated with product owners, team members, technologists, and other scrum masters to define solutions and drive progress.
-            <br>Experience working with geographically disperse teams (CST, EST, IST)
-            <br>Coached teams in Agile practices and provided necessary training to create positive mindset to Agile methodologies.
-            <br>Support projects that help brokers enroll small business to variety of different UHC products
-            <br>Coached team members in better understanding drivers to IT and business metrics
-            <br>Support compliance change ticket process and releases
-            <br>Focused on Agile methodologies primarily in Scrum
-        <h3>Associate Project Manager (Jul 2018 - Feb 2020)</h3>
-            Support collaboration/relationship building with IT and business stakeholders
-            <br>Provide analytics to key IT and business metrics for management and technical leads
-            <br>Focused on Agile methodologies in Scrum and Kanban
-            <br> Manage multiple products simultaneously and prioritize workload to meet project deadlines
-        <h3>Enterprise Architect(Jan 2018 - Jun 2018)</h3>
-            Cross-analyze the TCO initiative with M&R and UHG applications/assets
-            <br>Contribute in refreshing the Common Medicare Platform (CMP)
-        <h3>Project Manager (Jul 2017 - Dec 2017)</h3>
-            Contributed in the execution of balancing several executive sponsored Splunk ITSI projects: CBAs & CTSs
-            <br>Collaborated with Splunk professional services and several Splunk related departments
-            <br>Tools used: Agile Rally, ServiceNow, and Splunk ITSI
-    </section>
 <!---Add Contact Me Section here: 1) Phone 2) Email Address 3) GitHub Account -->
     <section id="contact_info" class="main_page">
         <h1>Contact Me!</h1>
