--- a/index.html
+++ b/index.html
@@ -7,41 +7,68 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body> 
-    <header>
+    
+    <header class="relative">
         <h1>David Trieu</h1>
+        <!---Have those buttons reference the belowed sections if user wants to go directly to it -->
+        <main>
+            <section class="card">
+                <a href="#about_me">About Me</a>
+            </section>
+            <section class="card">
+                <a href="#experience_section">Professional Exp.</a>
+            </section>
+            <section class="card">
+                <a href="#Coding_Experience">Coding Exp.</a>
+            </section>
+            <section class="card">
+                <a href="#contact_info">Contact Me</a>
+            </section>
+        </main>
+       
     </header>
- <!---Have those buttons reference the belowed sections if user wants to go directly to it -->
-    <main>
-        <section class="card">
-            <header><a href="#about_me">About Me</a></header>
+
+    <section id="about_me" class="about_me_pop_up">
+        <section class="top_selection">
+            <img src="Profile Pic.jpg" class="profile" alt="David's profile pic">
+            <section class="top_inner_box">
+             My name is David Trieu and this is my professional profile page. 
+            <br>As you progress throughout this website, you will get to know more about my work experience as well as a way to reach me if you have any questions!
+            <br>I have lived in Minnesota almost my entire live with the minor exclusion of heading to Iowa to further my education.
+            <br>After I graduated, I came back to MN with an offer to work in the IT space as a project manager for the last 5 years. 
+            <br>Due to the new changes, I have been trying to seek new challenges and discovered this software class. 
+            </section>
         </section>
-        <section class="card">
-            <header><a href="#experience_section">Work</a></header>
-        </section>
-        <section class="card">
-            <header><a href="#contact_info">Contact Me</a></header>
-        </section>
-    </main>
+    </section>
+  
     <!-- Buttons in the center of page -->
     <section class="main_page">
-        <div id="about_me" class="about_me">
-            <img src="about_time.jpeg" alt="about time picture">
-            <p>About me!</p>
-        </div>
+        <largerbox class="welcome">
+            <img src="about_time.jpeg" class="largerpicture" alt="About Time Picture">
+            <p>Welcome!</p>
+        </largerbox>
         <div id="experience_section" class="experience_section">
-            <img src="Pathway.jpeg" alt ="pathway">
-            <p>Professional Experience!</p>
+            <img src="Pathway.jpeg" alt ="Pathway">
+            <p><a href="https://www.linkedin.com/in/davidtrieu1/">Professional Experience!</a></p>
+        </div>
+        <div id="Coding_Experience" class="coding_exp">
+            <img src="Coding.jpg" alt="Coding Picture">
+            <p><a href="https://github.com/Dtrieu1?tab=repositories">Coding Experience!</a></p>
+        </div>
+        <div id="contact_info" class="contact_info">
+            <img src="Phone Booth.jpg" alt="Phone Booth">
+            <p><a href="mailto:davidtrieu1@gmail.com">Contact me!</a></p>
         </div>
     </section>
 
  
-<!---Add Contact Me Section here: 1) Phone 2) Email Address 3) GitHub Account -->
+<!---Add Contact Me Section here: 1) Phone 2) Email Address --->
     <section id="contact_info" class="main_page">
         <h1>Contact Me!</h1>
         <ul>
             <li>Phone #: (952)-261-4182</li>
             <li>Email: davidtrieu1@gmail.com</li>
-            <li>Git Hub:</li>
+            <li><a href="https://github.com/Dtrieu1?tab=repositories">Github: Dtrieu1</a></li>
         </ul>
     </section>
 </body>
