Updated comments in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header class="relative">
         <h1>David Trieu</h1>
-        <!---Have those buttons reference the belowed sections if user wants to go directly to it -->
+<!---Have those buttons reference the belowed sections if user wants to go directly to it -->
         <main>
             <section class="card">
                 <a href="#about_me">About Me</a>
@@ -27,7 +27,7 @@
         </main>
        
     </header>
-
+<!-- Profile Section  -->
     <section id="about_me" class="about_me_pop_up">
         <section class="top_selection">
             <img src="Profile Pic.jpg" class="profile" alt="David's profile pic">
@@ -62,7 +62,7 @@
     </section>
 
  
-<!---Add Contact Me Section here: 1) Phone 2) Email Address --->
+<!---Add Contact Me Section here: 1) Phone 2) Email Address 3) Git Hub Account--->
     <section id="contact_info" class="main_page">
         <h1>Contact Me!</h1>
         <ul>
