added link to Quotaku

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Trieu Professional Profile</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body> 
-    
+
+<body>
+
     <header class="relative">
         <h1>David Trieu</h1>
-<!---Have those buttons reference the belowed sections if user wants to go directly to it -->
+        <!---Have those buttons reference the belowed sections if user wants to go directly to it -->
         <main>
             <section class="card">
                 <a href="#about_me">About Me</a>
@@ -25,22 +27,26 @@
                 <a href="#contact_info">Contact Me</a>
             </section>
         </main>
-       
+
     </header>
-<!-- Profile Section  -->
+    <!-- Profile Section  -->
     <section id="about_me" class="about_me_pop_up">
         <section class="top_selection">
             <img src="Profile Pic.jpg" class="profile" alt="David's profile pic">
             <section class="top_inner_box">
-             My name is David Trieu and this is my professional profile page. 
-            <br>As you progress throughout this website, you will get to know more about my work experience as well as a way to reach me if you have any questions!
-            <br>I have lived in Minnesota almost my entire live with the minor exclusion of heading to Iowa to further my education.
-            <br>After I graduated, I came back to MN with an offer to work in the IT space as a project manager for the last 5 years. 
-            <br>Due to the new changes, I have been trying to seek new challenges and discovered this software class. 
+                My name is David Trieu and this is my professional profile page.
+                <br>As you progress throughout this website, you will get to know more about my work experience as well
+                as a way to reach me if you have any questions!
+                <br>I have lived in Minnesota almost my entire live with the minor exclusion of heading to Iowa to
+                further my education.
+                <br>After I graduated, I came back to MN with an offer to work in the IT space as a project manager for
+                the last 5 years.
+                <br>Due to the new changes, I have been trying to seek new challenges and discovered this software
+                class.
             </section>
         </section>
     </section>
-  
+
     <!-- Buttons in the center of page -->
     <section class="main_page">
         <largerbox class="welcome">
@@ -48,12 +54,12 @@
             <p>Welcome!</p>
         </largerbox>
         <div id="experience_section" class="experience_section">
-            <img src="Pathway.jpeg" alt ="Pathway">
+            <img src="Pathway.jpeg" alt="Pathway">
             <p><a href="https://www.linkedin.com/in/davidtrieu1/">Professional Experience!</a></p>
         </div>
         <div id="Coding_Experience" class="coding_exp">
             <img src="Coding.jpg" alt="Coding Picture">
-            <p><a href="https://github.com/Dtrieu1?tab=repositories">Coding Experience!</a></p>
+            <p><a href="https://s0m3y3.github.io/Quotaku/">Coding Project: Quotaku!</a></p>
         </div>
         <div id="contact_info" class="contact_info">
             <img src="Phone Booth.jpg" alt="Phone Booth">
@@ -61,8 +67,8 @@
         </div>
     </section>
 
- 
-<!---Add Contact Me Section here: 1) Phone 2) Email Address 3) Git Hub Account--->
+
+    <!---Add Contact Me Section here: 1) Phone 2) Email Address 3) Git Hub Account--->
     <section id="contact_info" class="main_page">
         <h1>Contact Me!</h1>
         <ul>
@@ -72,5 +78,5 @@
         </ul>
     </section>
 </body>
-</html>
 
+</html>
